# aws-data-engineering-stack-playground

./: .gitignore  README.md
.agents/roles/: orchestrator.md  python-dbt-engineer.md  qa-engineer.md  security-reviewer.md  terraform-engineer.md
.agents/rules/: target-architecture.md
.agents/skills/aws-cli/: SKILL.md
.agents/skills/data-pipeline-runner/: SKILL.md
.agents/skills/dbt-runner/: SKILL.md
.agents/skills/terraform-manager/: SKILL.md
.agents/workflows/: build-streaming-pipeline.md
.github/workflows/: dbt-ci.yml
glue/: query_redis.py  streaming_job.py
producer/: producer.py  pyproject.toml
terraform/: athena_fix_plan.txt  athena_table.tf  codebuild.tf  ecs_fix_plan.txt  firehose_logs.tf  glue.tf  glue_kinesis_table.tf  glue_streaming.tf  main.tf  monitoring.tf  orchestration.tf  outputs.tf  plan_output.txt  redis.tf  variables.tf  vpc_endpoints.tf
transforms/: Dockerfile  main.py  pyproject.toml
transforms/market_data_transforms/: dbt_project.yml  packages.yml  profiles.yml
transforms/market_data_transforms/models/: sources.yml
transforms/market_data_transforms/models/marts/: fct_trade_summary_hourly.sql  fct_trades.sql  schema.yml
transforms/market_data_transforms/models/staging/: schema.yml  sources.yml  stg_market_data.sql
