[project]
name = "producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.73",
    "websockets>=16.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
